# DiracSVT

./: README.md  paper.md  solver.h
DIRAC_CPP/: CMakeLists.txt  README.md  wavefunction.txt
DIRAC_CPP/include/: solver.h  util.h
DIRAC_CPP/lib/: DIRAC_SOLVER  data.csv
DIRAC_CPP/src/: main.cpp  solver.cpp  util.cpp
DIRAC_MATLAB/: README.md  main.m
DIRAC_MATLAB/files/: Data.xlsx  data.xlsx
DIRAC_MATLAB/include/solver/: BC.m  BC_pos.m  dirac_solver.m  point_solve.m
DIRAC_MATLAB/include/utility/: SphericalBesselY.m  plotWF.m  setup.m
DIRAC_PYTHON/: README.md  boundary_conditions.py  main.py  numerical_solver.py  parameters.xlsx  shooting_method.py  util.py
DIRAC_PYTHON/data/: data.xlsx
DIRAC_PYTHON/scripts/: boundary_conditions.py  main.py  numerical_solver.py  shooting_method.py  util.py
cpp_single_shooting/: CMakeLists.txt  README.md  data.csv  dirac_solver.cpp  lseq_gaussian_solver.cpp  main.cpp  solver.cpp  solver.h  test.cpp  util.h
cpp_single_shooting/include/: parameters.csv  solver.h  util.h
cpp_single_shooting/src/: main.cpp
matlab_single_shooting/: README.md  main.m
matlab_single_shooting/files/: parameters.xlsx
matlab_single_shooting/include/solver/: Integrate_RK4.m
matlab_single_shooting/include/utility/: ParameterContainer.m
matlab_single_shooting/src/solver/: Integrate_RK4  Integrate_Tensor.m  Tensor_fit.m  dirac_solver.m
matlab_single_shooting/src/utility/: SphericalBesselJ.m  plotWF.m  setup.m
python_single_shooting/: DiracData.py  README.md  ShootingUtils.py  boundary_conditions.py  data.xlsx  main.py  numerical_solver.py  shooting_method.py  util.py
python_single_shooting/files/: parameters.xlsx
python_single_shooting/src/: DiracData.py  ShootingUtils.py
